--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "angularfire2": "^4.0.0-rc.1",
-    "api-ai-javascript": "^2.0.0-beta.21",
-    "firebase": "^4.0.0",
+    "angularfire2": "4.0.0-rc.1",
+    "api-ai-javascript": "2.0.0-beta.21",
+    "firebase": "3.6.6",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
