--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "4.0.0-rc.1",
     "api-ai-javascript": "2.0.0-beta.21",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "3.6.6",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -37,5 +43,17 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
